kubernetes/examples/ingress/vpro-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app #should match with the selector match label
spec:
  replicas: 1
  #from here are pod information
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: imranvisualpath/freshtomapp:V7
        ports:
          - name: my-app-port
            containerPort: 8080
