kubernetes/examples/ingress/vpro-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.manojm.site #when user try to access the link then ingress 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: my-app
            port: 
              number: 80 #this should match with service port
